syntax = "proto3";

package user;


service UserService {
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {};
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc GetMultipleUser(GetMultipleUserRequest) returns (GetMultipleUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};

  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse) {};
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse) {};
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};

  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse) {};
  rpc GetFollowing(GetFollowingRequest) returns (GetFollowingResponse) {};
  rpc GetSuggestedPeople(GetSuggestedPeopleRequest) returns (GetSuggestedPeopleResponse) {};

  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse) {};
  rpc UnFollowUser(UnFollowUserRequest) returns (UnFollowUserResponse) {};
  
  rpc UsersCount(UsersCountRequest) returns (UsersCountResponse) {};
  rpc GetUserCountByDateDetails(GetUserCountByDateDetailsRequest) returns (GetUserCountByDateDetailsResponse) {};

  rpc GetBlockedUsersByBlockerId(GetBlockedUsersByBlockerIdRequest) returns (GetBlockedUsersByBlockerIdResponse) {};
  rpc GetBlockedUserByBlockerAndBlockedId(GetBlockedUserByBlockerAndBlockedIdRequest) returns (GetBlockedUserByBlockerAndBlockedIdResponse) {};
  rpc CreateBlockedUser(CreateBlockedUserRequest) returns (CreateBlockedUserResponse) {};
  rpc DeleteBlockedUser(DeleteBlockedUserRequest) returns (DeleteBlockedUserResponse) {};
}

message Image {
  string url =1;
  string name=2;
}



enum Status {
  active=0;
  blocked=1;
  deleted=2;
}

enum Role{
  user=0;
  admin=1;
}


message User {
  string _id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string location = 5;
  string state = 6;
  string gender = 7;
  int32 followeeCount = 9;
  int32 followerCount = 10;
  string createdAt = 11;
  string updatedAt = 12;
  Status status = 13;
  Role role = 14;
  bool isOnline = 15;
  Image image = 16;
}

message BlockedUser {
  string _id = 1;
  string blockedUserId = 2;
  string blockerUserId = 3;
  string createdAt = 4;
  string updatedAt = 5;
  string blockedUserName=6;
  string blockedUserImage=7;
}

message GetAllUsersRequest {
  int32 page =1;
  string startDate=2;
  string endDate=3;
  string searchText=4;
}

message GetAllUsersResponse {
  repeated User users =1;
  int32 currentPage =2;
  int32 numberOfPages=3;
}

message GetUserRequest {
  string userId =1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string userId =1;
  User user = 2;
}

message UpdateUserResponse {
  User user = 2;
}

message BlockUserRequest {
  string userId = 1;
}

message BlockUserResponse {
  string userId=1;
}

message UnblockUserRequest {
  string userId = 1;
}

message UnblockUserResponse {
  string userId=1;
}

message DeleteUserRequest {
  string userId = 1;
}

message DeleteUserResponse {
  string userId = 1;
}

message GetMultipleUserRequest {
  repeated string userIds=1;
}

message GetMultipleUserResponse {
  repeated User users =1;
}

message GetFollowersRequest {
  string userId=1;
  int32 page=2;
}

message GetFollowersResponse {
  repeated User users =1;
  int32 numberOfPages=2;
  int32 currentPage=3;
}

message GetFollowingRequest {
  string userId=1;
  int32 page=2;
}

message GetFollowingResponse {
  repeated User users =1;
  int32 numberOfPages=2;
  int32 currentPage=3;
}

message GetSuggestedPeopleRequest {
  string userId=1;
  int32 page=2;
}

message GetSuggestedPeopleResponse {
  repeated User users =1;
  int32 numberOfPages=2;
  int32 currentPage=3;
}

message FollowUserRequest {
  string userId=1;
  string targetId=2;
}

message FollowUserResponse {
  User user =1;
}

message UnFollowUserRequest {
 string userId=1;
  string targetId=2;
}

message UnFollowUserResponse {
  User user =1;
}

message UsersCountRequest {
  string startDate=1;
  string endDate=2;
}

message UsersCountResponse{
  int32 usersCount =1;
  int32 femaleUsersCount=2;
  int32 maleUsersCount=3;
  int32 otherUsersCount=4;
}

message GetUserCountByDateDetailsRequest {
  string startDate=1;
  string endDate=2;
}

message UserByDateDetails {
  string date=1;
  int32 count=2;
}

message GetUserCountByDateDetailsResponse {
  repeated UserByDateDetails userCountArray =1;
}

message GetBlockedUsersByBlockerIdRequest {
  string blockerUserId=1;
  int32 page=2;
}

message GetBlockedUsersByBlockerIdResponse {
  repeated BlockedUser blockedUsers =1;
  int32 currentPage=2;
  int32 numberOfPages=3;
}

message GetBlockedUserByBlockerAndBlockedIdRequest {
  string blockerUserId=1;
  string blockedUserId=2;
}

message GetBlockedUserByBlockerAndBlockedIdResponse {
  BlockedUser blockedUser=1;
}

message CreateBlockedUserRequest {
  string blockerUserId=1;
  string blockedUserId=2;
}

message CreateBlockedUserResponse {
  BlockedUser blockedUser=1;
}

message DeleteBlockedUserRequest {
  string blockerUserId=1;
  string blockedUserId=2;
}

message DeleteBlockedUserResponse {
  BlockedUser blockedUser=1;
}