// Original file: src/proto/feed.proto


export interface GetAllReportsRequest {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}

export interface GetAllReportsRequest__Output {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}
