// Original file: src/proto/user.proto


export interface UsersCountResponse {
  'usersCount'?: (number);
  'femaleUsersCount'?: (number);
  'maleUsersCount'?: (number);
  'otherUsersCount'?: (number);
}

export interface UsersCountResponse__Output {
  'usersCount'?: (number);
  'femaleUsersCount'?: (number);
  'maleUsersCount'?: (number);
  'otherUsersCount'?: (number);
}
