// Original file: src/proto/feed.proto


export interface SearchPostRequest {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}

export interface SearchPostRequest__Output {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}
