// Original file: src/proto/payment.proto


export interface GetAllTransactionsRequest {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}

export interface GetAllTransactionsRequest__Output {
  'searchText'?: (string);
  'page'?: (number);
  'startDate'?: (string);
  'endDate'?: (string);
}
