// Original file: src/proto/user.proto


export interface BlockedUser {
  '_id'?: (string);
  'blockedUserId'?: (string);
  'blockerUserId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'blockedUserName'?: (string);
  'blockedUserImage'?: (string);
}

export interface BlockedUser__Output {
  '_id'?: (string);
  'blockedUserId'?: (string);
  'blockerUserId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'blockedUserName'?: (string);
  'blockedUserImage'?: (string);
}
