// Original file: src/proto/user.proto

import type { UserByDateDetails as _user_UserByDateDetails, UserByDateDetails__Output as _user_UserByDateDetails__Output } from '../user/UserByDateDetails';

export interface GetUserCountByDateDetailsResponse {
  'userCountArray'?: (_user_UserByDateDetails)[];
}

export interface GetUserCountByDateDetailsResponse__Output {
  'userCountArray'?: (_user_UserByDateDetails__Output)[];
}
